<resources>
    <string name="app_name">LiteRise</string>
    <string name="tagline">Learn. Read. Rise!</string>
    <string name="welcome">Welcome Back!</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar Sekarang</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="password">Kata sandi</string>
    <string name="full_name">Nama Kamu (Orang Tua)</string>
    <string name="child_name">Nama Anak Kamu</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="dont_have_account">Belum punya akun? Masuk</string>
    <string name="already_have_account">Sudah punya akun? Masuk</string>
    <string name="enter_otp">Masukkan kode sandi</string>
    <string name="verify">Verifikasi</string>
    <string name="resend_code">Tidak Menerima Kode OTP? Kirim ulang</string>
</resources>